--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,50 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.slider {
+height:5px;
+border-radius:5px;
+background:#ddd;
+position:relative
+}
+
+.slider .progress{
+height:5px;
+left:25%;
+right:25%;
+position:absolute;
+border-radius:5px;
+background:#17A2BB;
+}
+
+.range-input {
+position:relative;
+}
+
+.range-input input{
+position:absolute;
+top:-5px;
+height:5px;
+width:100%;
+background:none;
+-webkit-appearance:none;
+pointer-events:none
+}
+
+input[type="range"]::-webkit-slider-thumb{
+height:17px;
+width:17px;
+border-radius:50%;
+pointer-events:auto;
+-webkit-appearance:none;
+background:#17A2BB;
+}
+
+{
+	/*
+	 
+
 #startRange {
   overflow: hidden;
   height:10px;
@@ -48,3 +92,5 @@ height: 100%;
       background: black;
       box-shadow: -80px 0 0 80px blue;
     }
+	 */
+}
